# VideoAudioTranscoding

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ffmpeg/: cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.c  ffmpeg_jni_define.h
app/src/main/java/com/ffmpeg/panel/: MainActivity.java
app/src/main/java/com/ffmpeg/panel/bean/: VideoInfo.java
app/src/main/java/com/ffmpeg/panel/jni/: FFmpegCmd.java
app/src/main/java/com/ffmpeg/panel/listener/: OnHandleListener.java
app/src/main/java/com/ffmpeg/panel/util/: AsyncTool.java  FFmpegUtil.java  FileUtil.java  TxtUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
